--- a/_pgbackup/index_1625580687.html
+++ b/_pgbackup/index_1625580687.html
@@ -189,11 +189,11 @@ window.onclick = function(event) {
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="bnr-shape-img-2 phone">
-                <img src="images/bnr-shape-2.png" alt="logo" width="810" class="imghero">
-                <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-                <lottie-player src="https://assets8.lottiefiles.com/packages/lf20_mlf754me.json" background="transparent" speed="1" loop autoplay class="blob1"></lottie-player>
+                <div class=" bnr-shape-img-2 phone">
+                    <img src="images/bnr-shape-2.png" alt="logo" width="810" class="img1200 imghero">
+                    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+                    <lottie-player src="https://assets8.lottiefiles.com/packages/lf20_mlf754me.json" background="transparent" speed="1" loop autoplay class="blob1 blob1200"></lottie-player>
+                </div>
             </div>
         </section>
         <div class="space1"></div>
@@ -247,7 +247,7 @@ window.onclick = function(event) {
                 </div>
             </div>
         </div>
-        <lottie-player src="https://assets4.lottiefiles.com/packages/lf20_ojqrskc0.json" background="transparent" speed="1" loop autoplay class="blob2"></lottie-player>
+        <lottie-player src="https://assets4.lottiefiles.com/packages/lf20_ojqrskc0.json" background="transparent" speed="1" loop autoplay class="blob2 blob4k2"></lottie-player>
         <div id="Pilares" class="spce2"></div>
         <div class="cont12 container">
             <div class="pilares row">
@@ -275,12 +275,12 @@ window.onclick = function(event) {
                 </div>
             </div>
         </div>
-        <lottie-player src="https://assets4.lottiefiles.com/packages/lf20_ojqrskc0.json" background="transparent" speed="1" loop autoplay class="blob3 w-75"></lottie-player>
+        <lottie-player src="https://assets4.lottiefiles.com/packages/lf20_ojqrskc0.json" background="transparent" speed="1" loop autoplay class="blob3 blob34k w-75"></lottie-player>
         <div id="features3" class="space" style="height: 196px; margin-top: 0;"></div>
         <div class="container">
             <div class="row">
                 <div data-tilt class="hello3 fadeInLeft spacecon wow">
-                    <iframe class="hello2 img-fluid" src="https://www.youtube.com/embed/QJKqBbkzAtA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="hello12 hello2 hello923 img-fluid" src="https://www.youtube.com/embed/QJKqBbkzAtA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <img class="img-fluid img-shadow2 img-shadow3" src="images/img-4.png" alt="img">
                 </div>
                 <div class="col-lg-5 fadeInLeft spacecon wow" data-wow-duration="2.5s">
@@ -313,7 +313,7 @@ window.onclick = function(event) {
                     </div>
                 </div>
                 <div data-tilt class="hello fadeInRight spacecon wow">
-                    <iframe class="img-fluid hello2" src="https://www.youtube.com/embed/XQ7v3He994c?" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="hello123 hello2 hello92 img-fluid" src="https://www.youtube.com/embed/XQ7v3He994c?" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <img class="img-fluid img-shadow2 img-shadow3 img-shadow32" src="images/img-4.png" alt="img">
                 </div>
             </div>
@@ -463,8 +463,7 @@ BLOCKCHAIN</h5>
                 </div>
             </div>
         </div>
-        <lottie-player src="https://assets4.lottiefiles.com/packages/lf20_ojqrskc0.json" background="transparent" speed="1" loop autoplay class="blob3 w-75"></lottie-player>
-        <lottie-player src="https://assets4.lottiefiles.com/packages/lf20_ojqrskc0.json" background="transparent" speed="1" loop autoplay class="blob2"></lottie-player>
+        <lottie-player src="https://assets4.lottiefiles.com/packages/lf20_ojqrskc0.json" background="transparent" speed="1" loop autoplay class="blob3 blob34k6 w-75"></lottie-player>
         <div id="portfolio" class="space" style="height: 100px"></div>
         <div class="container">
             <div class="row">
@@ -701,42 +700,48 @@ de tu empresa</h1>
                 </div>
             </div>
         </div>
-        <div class="space" style="height: 125px"></div>
-        <footer class="site-footer">
-            <div class="col-sm-12 text-center">
-                <img src="images/logo-alt.svg" alt="logo" width="153">
+        <div class="space" style="height: 50px;"></div>
+        <footer class="site-footer" style="background-color: #1c7ff4; height: 100%;">
+            <section class="anim">
+                <div class="wave wave1"></div>
+                <div class="wave wave2"></div>
+                <div class="wave wave3"></div>
+                <div class="wave wave4"></div>
+            </section>
+            <div class="logofoot">
+                <img src="images/logo-alt.svg" alt="logo" width="300" class="imgfo">
             </div>
+            <div class="dicio">
+                <div>
+                    <div class="footer">
+                        <li class="footer">
+                            <a href="#feature2">Inicio</a>
+                        </li>
+                        <li class="footer">
+                            <a href="#feature2">Productos</a>
+                        </li>
+                        <li>
+                            <a href="Notice.html" target="_blank">Aviso de privacidad</a>
+                        </li>
+                        <li>
+                            <a href="#cta">Contacto</a>
+                        </li>
+                    </div>
+                </div>
+            </div>
+            <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
             <column class="Foot">
                 <div class="address-holder dicio">
-                    <div class="">
-                        <i class=""></i> info@dicio.ai
+                    <div>
+                        <i></i> info@dicio.ai
                     </div>
-                    <div class="">
-                        <i class=""></i>
+                    <div>
+                        <i></i>
                         <div>Piso 2, iOS Offices, Miyanna
                             <br>
                             Av. Ejército Nacional 769
                             <br>
                             Granada, Miguel Hidalgo 11520, CDMX
-                        </div>
-                    </div>
-                </div>
-                <div class="dicio">
-                    <div>
-                        <h4>DICIO</h4>
-                        <div class="footer">
-                            <li class="footer">
-                                <a href="#feature2">Inicio</a>
-                            </li>
-                            <li class="footer">
-                                <a href="#feature2">Productos</a>
-                            </li>
-                            <li>
-                                <a href="Notice.html" target="_blank">Aviso de privacidad</a>
-                            </li>
-                            <li>
-                                <a href="#cta">Contacto</a>
-                            </li>
                         </div>
                     </div>
                 </div>
@@ -766,7 +771,7 @@ de tu empresa</h1>
                 </div>
             </column>
             <div class="footer-copyright">
-                <p>Copyrighs @DICIO</p>
+                <p>copyright &copy; DICIO 2021. All Right Reserved</p>
             </div>
         </footer>
         <div id="backtotop">
