--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                             </ul>
                         </div>
                         <h1>Simplificamos las interacciones de la sociedad</h1>
-                        <p><p>Desarrollamos soluciones de identificación digital totalmente seguras, además te ofrecemos las mejores soluciones basadas en Biometría, Inteligencia Artificial y Blockchain</p></p>
+                        <p><p>Desarrollamos soluciones de identificación digital totalmente seguras, además te ofrecemos las mejores soluciones basadas en Biometría, Inteligencia Artificial y Blockchain.</p></p>
                         <div class="bnr-btn">
                             <ul class="list-inline">
                                 <li class="list-inline-item">
@@ -201,8 +201,8 @@ window.onclick = function(event) {
             <div class="row justify-content-center" style="z-index: -7;">
                 <div class="col-md-12" style="z-index: -8;">
                     <div class="section-title text-center">
-                        <h1 style="color: #0883f5;">Utiliza DICIO para agilizar procesos dentro de tu organización</h1>
-                        <h4><h2>Desarrollamos soluciones que garantizan procesos de identificación digital de una manera fácil y segura&nbsp;</h2></h4>
+                        <h1 style="color: #0883f5;">Utiliza DICIO para agilizar procesos dentro de tu organización.</h1>
+                        <h4><h2 style="margin-left: 34px; margin-right: 34px;">Desarrollamos soluciones que garantizan procesos de identificación digital de una manera fácil y segura.&nbsp;</h2></h4>
                     </div>
                     <div class="space" style="height: 40px"></div>
                 </div>
@@ -215,7 +215,7 @@ window.onclick = function(event) {
                 <div class="col-lg-4 col-sm-6 fadeInUp wow zin" data-wow-duration="1.5s">
                     <div class="service-item">
                         <i class="flaticon-contrato"></i>
-                        <h5><p>Onboarding digital, con validación de firmas y documentos digitales&nbsp;</p></h5>
+                        <h5><p>Onboarding con validación de firmas y documentos digitales&nbsp;</p></h5>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6 fadeInUp wow zin" data-wow-duration="2.5s">
@@ -261,12 +261,12 @@ window.onclick = function(event) {
                         <h4 style="color: #0883f5; font-size: 30px;">Acerca de nosotros</h4>
                         <h1>Pilares</h1>
                     </div>
-                    <p>Desarrollamos herramientas seguras, inteligentes y altamente competitivas para facilitar las interacciones digitales de nuestros clientes</p>
+                    <p>Desarrollamos herramientas seguras, inteligentes y altamente competitivas para facilitar las interacciones digitales de nuestros clientes.</p>
                     <ul>
-                        <li>Optimiza tiempos de respuesta, mayor disponibilidad</li>
-                        <li>Más clientes con vinculación no presencial, fuera del horario de sucursal (Multicanal)</li>
-                        <li>Inclusión financiera y digital</li>
-                        <li>Realizamos validaciones con verificación institucional</li>
+                        <li>Optimiza tiempos de respuesta, mayor disponibilidad.</li>
+                        <li>Más clientes con vinculación no presencial, fuera del horario de sucursal (Multicanal).</li>
+                        <li>Inclusión financiera y digital.</li>
+                        <li>Realizamos validaciones con verificación institucional.</li>
                     </ul>
                     <div class="space" style="height: 30px"></div>
                     <div class="thegncy-btn">
@@ -291,7 +291,7 @@ window.onclick = function(event) {
                     <div class="space" style="height: 50px"></div>
                     <div class="bounceInUp feature-item newclass wow" data-wow-duration="2.5s">
                         <div class="feature-item-content">
-                            <p style="text-align: justify;">De la opción a sus clientes de abrir una cuenta bancaria de forma fácil, sencilla y sin la necesidad de acudir a una sucursal</p>
+                            <p style="text-align: justify;">De la opción a sus clientes de abrir una cuenta bancaria de forma fácil, sencilla y sin la necesidad de acudir a una sucursal.</p>
                         </div>
                     </div>
                 </div>
@@ -308,7 +308,7 @@ window.onclick = function(event) {
                     <div class="space" style="height: 50px"></div>
                     <div class="bounceInUp feature-item newclass wow" data-wow-duration="2.5s">
                         <div class="feature-item-content">
-                            <p style="text-align: justify;">Realiza cualquier trámite con tus clientes sin la necesidad de utilizar su firma autógrafa Registra y valida su información de manera digital, a través de nuestra plataforma Consentimiento Expreso Acreditada por la Secretaría de Economía y cumplimiento de la NOM 151</p>
+                            <p style="text-align: justify;">Realiza cualquier trámite con tus clientes sin la necesidad de utilizar su firma autógrafa Registra y valida su información de manera digital, a través de nuestra plataforma Consentimiento Expreso Acreditada por la Secretaría de Economía y cumplimiento de la NOM 151.</p>
                         </div>
                     </div>
                 </div>
@@ -325,7 +325,7 @@ window.onclick = function(event) {
                 <div class="row justify-content-center">
                     <div class="col-md-12">
                         <div class="section-title text-center white">
-                            <h1>Nuestra plataforma ofrece soluciones específicas para empresas de distintos rubros</h1>
+                            <h1 style="margin-left: 50px; margin-right: 50px;">Nuestra plataforma ofrece soluciones específicas para empresas de distintos rubros</h1>
                             <img src="images/dot-white.png" alt="img">
                         </div>
                         <div class="space" style="height: 35px"></div>
@@ -426,7 +426,7 @@ la Norma Oficial Mexicana 151</p>
                         </div>
                         <div class="feature-item-content">
                             <h5>CRYPTO FACE KEY</h5>
-                            <p>Genera un biométrico facial y un score de vida de los individuos procesando esta información de manera segura</p>
+                            <p class="texti">Genera un biométrico facial y un score de vida de los individuos procesando esta información de manera segura</p>
                         </div>
                     </div>
                     <div class="feature-item wow bounceInUp" data-wow-duration="3s">
@@ -436,7 +436,7 @@ la Norma Oficial Mexicana 151</p>
                         <div class="feature-item-content">
                             <h5>VALIDACIÓN EN
 BLOCKCHAIN</h5>
-                            <p>Este sistema de atestaciones y validaciones nos ayuda a dar certeza utilizando tecnología blockchain, logrando tener una trazabilidad en tiempo y forma de las operaciones, así como de las validaciones realizadas por todos dentro de DICIO</p>
+                            <p class="texti">Este sistema de atestaciones y validaciones nos ayuda a dar certeza utilizando tecnología blockchain, logrando tener una trazabilidad en tiempo y forma de las operaciones, así como de las validaciones realizadas por todos dentro de DICIO</p>
                         </div>
                     </div>
                     <div class="feature-item wow bounceInUp" data-wow-duration="3.5s">
@@ -445,7 +445,7 @@ BLOCKCHAIN</h5>
                         </div>
                         <div class="feature-item-content">
                             <h5>VIDEO TOKEN</h5>
-                            <p>Un proceso útil para fortalecer las contraseñas de un solo uso al utilizar los mecanismos estáticos y dinámicos de biometría</p>
+                            <p class="texti">Un proceso útil para fortalecer las contraseñas de un solo uso al utilizar los mecanismos estáticos y dinámicos de biometría</p>
                         </div>
                     </div>
                     <div class="feature-item wow bounceInUp" data-wow-duration="3.5s">
@@ -454,7 +454,7 @@ BLOCKCHAIN</h5>
                         </div>
                         <div class="feature-item-content">
                             <h5>HOLOGRAMA</h5>
-                            <p>Genera una mayor certeza a la evidencia presentada por parte de los usuarios, al validar que existan los mecanismos holográficos de seguridad en sus documentos oficiales</p>
+                            <p class="texti">Genera una mayor certeza a la evidencia presentada por parte de los usuarios, al validar que existan los mecanismos holográficos de seguridad en sus documentos oficiales</p>
                         </div>
                     </div>
                 </div>
