--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ window.onclick = function(event) {
                     <div class="space" style="height: 50px"></div>
                     <div class="bounceInUp feature-item newclass wow" data-wow-duration="2.5s">
                         <div class="feature-item-content">
-                            <p style="text-align: justify;">Realiza cualquier trámite con tus clientes sin la necesidad de utilizar su firma autógrafa Registra y valida su información de manera digital, a través de nuestra plataforma Consentimiento Expreso Acreditada por la Secretaría de Economía y cumplimiento de la NOM 151.</p>
+                            <p style="text-align: justify;">Realiza cualquier trámite con tus clientes sin la necesidad de utilizar su firma autógrafa Registra y valida su información de manera digital, a través de nuestra plataforma Consentimiento Expreso acreditada por la Secretaría de Economía y cumplimiento de la NOM 151.</p>
                         </div>
                     </div>
                 </div>
@@ -332,73 +332,72 @@ window.onclick = function(event) {
                     </div>
                     <div class="col-lg-8 col-sm-12">
                         <div class="testimonials">
-                            <div class="testimonial-item">
-                                <div class="CLASS_BLUE New_CLAS fadeInUp feature-panel new_style_text_3 new_style_text_4 wow" data-wow-duration="1s">
-                                    <div class="feature--new">
-                                        <div class="feature--icon">
-                                            <i class="flaticon-save-money icons"></i>
-                                        </div>
-                                        <div class="feature--content">
-                                            <h9 class="new_class">Financiero</h9>
-                                        </div>
+                            <div class="CLASS_BLUE New_CLAS fadeInUp feature-panel new_style_text_3 new_style_text_4 wow" data-wow-duration="1s">
+                                <div class="feature--new">
+                                    <div class="feature--icon">
+                                        <i class="flaticon-save-money icons"></i>
                                     </div>
-                                    <div class="feature--new">
-                                        <div class="feature--icon">
-                                            <i class="flaticon-embassy icons"></i>
-                                        </div>
-                                        <div class="feature--content">
-                                            <h9 class="new_class">Gobierno</h9>
-                                        </div>
-                                    </div>
-                                    <div class="feature--new">
-                                        <div class="feature--icon">
-                                            <i class="flaticon-hospital icons"></i>
-                                        </div>
-                                        <div class="feature--content">
-                                            <h9 class="new_class">Servicios Medicos</h9>
-                                        </div>
-                                    </div>
-                                    <div class="feature--new">
-                                        <div class="feature--icon">
-                                            <i class="flaticon-life-insurance icons"></i>
-                                        </div>
-                                        <div class="feature--content">
-                                            <h9 class="new_class">Aseguradoras</h9>
-                                        </div>
+                                    <div class="feature--content">
+                                        <h9 class="new_class">Financiero</h9>
                                     </div>
                                 </div>
-                                <div class="CLASS_BLUE New_CLAS fadeInUp feature-panel new_style_text_3 new_style_text_4 wow" data-wow-duration="1s">
-                                    <div class="feature--new">
-                                        <div class="feature--icon">
-                                            <i class="flaticon-store icons"></i>
-                                        </div>
-                                        <div class="feature--content">
-                                            <h9 class="new_class">Retail</h9>
-                                        </div>
+                                <div class="feature--new">
+                                    <div class="feature--icon">
+                                        <i class="flaticon-embassy icons"></i>
                                     </div>
-                                    <div class="feature--new">
-                                        <div class="feature--icon icons">
-                                            <i class="flaticon-delivery"></i>
-                                        </div>
-                                        <div class="feature--content">
-                                            <h9 class="new_class">Delivery</h9>
-                                        </div>
+                                    <div class="feature--content">
+                                        <h9 class="new_class">Gobierno</h9>
                                     </div>
-                                    <div class="feature--new">
-                                        <div class="feature--icon">
-                                            <i class="flaticon-online-shopping icons"></i>
-                                        </div>
-                                        <div class="feature--content">
-                                            <h9 class="new_class">E-commerce</h9>
-                                        </div>
+                                </div>
+                                <div class="feature--new">
+                                    <div class="feature--icon">
+                                        <i class="flaticon-hospital icons"></i>
                                     </div>
-                                    <div class="feature--new">
-                                        <div class="feature--icon icons">
-                                            <i class="flaticon-earth-grid"></i>
-                                        </div>
-                                        <div class="feature--content">
-                                            <h9 class="new_class">Y más...</h9>
-                                        </div>
+                                    <div class="feature--content">
+                                        <h9 class="new_class">Servicios Medicos</h9>
+                                    </div>
+                                </div>
+                                <div class="feature--new">
+                                    <div class="feature--icon">
+                                        <i class="flaticon-life-insurance icons"></i>
+                                        <h9 class="new_class">Aseguradoras</h9>
+                                    </div>
+                                    <div class="feature--content">
+</div>
+                                </div>
+                            </div>
+                            <div class="CLASS_BLUE New_CLAS fadeInUp feature-panel new_style_text_3 new_style_text_4 wow" data-wow-duration="1s">
+                                <div class="feature--new">
+                                    <div class="feature--icon">
+                                        <i class="flaticon-store icons"></i>
+                                    </div>
+                                    <div class="feature--content">
+                                        <h9 class="new_class">Retail</h9>
+                                    </div>
+                                </div>
+                                <div class="feature--new">
+                                    <div class="feature--icon icons">
+                                        <i class="flaticon-delivery-truck truck"></i>
+                                    </div>
+                                    <div class="feature--content">
+                                        <h9 class="new_class">Delivery</h9>
+                                    </div>
+                                </div>
+                                <div class="feature--new">
+                                    <div class="feature--icon">
+                                        <i class="flaticon-online-shopping icons"></i>
+                                    </div>
+                                    <div class="feature--content">
+                                        <h9 class="new_class">E-commerce</h9>
+                                    </div>
+                                </div>
+                                <div class="feature--new">
+                                    <div class="feature--icon">
+                                        <i class="flaticon-earth-grid
+"></i>
+                                    </div>
+                                    <div class="feature--content">
+                                        <h9 class="new_class">Más</h9>
                                     </div>
                                 </div>
                             </div>
@@ -414,9 +413,9 @@ window.onclick = function(event) {
                 <div class="col-lg-5 wow fadeInLeft" data-wow-duration="2.5s">
                     <div class="section-title">
                         <span>DICIO</span>
-                        <h1>Tecnología que facilita las <span>interacciones</span> entre empresa y personas</h1>
+                        <h1>Tecnología que facilita las <span>interacciones</span> entre empresa y personas.</h1>
                         <p style="text-align: justify;">Nuestros procesos cumplen con el artículo 51 de la Circular Única Bancaria y
-la Norma Oficial Mexicana 151</p>
+la Norma Oficial Mexicana 151.</p>
                         <img src="images/dot-bluecolor.png" alt="img">
                     </div>
                     <div class="space" style="height: 50px"></div>
@@ -426,7 +425,7 @@ la Norma Oficial Mexicana 151</p>
                         </div>
                         <div class="feature-item-content">
                             <h5>CRYPTO FACE KEY</h5>
-                            <p class="texti">Genera un biométrico facial y un score de vida de los individuos procesando esta información de manera segura</p>
+                            <p class="texti">Genera un biométrico facial y un score de vida de los individuos procesando esta información de manera segura.</p>
                         </div>
                     </div>
                     <div class="feature-item wow bounceInUp" data-wow-duration="3s">
@@ -436,7 +435,7 @@ la Norma Oficial Mexicana 151</p>
                         <div class="feature-item-content">
                             <h5>VALIDACIÓN EN
 BLOCKCHAIN</h5>
-                            <p class="texti">Este sistema de atestaciones y validaciones nos ayuda a dar certeza utilizando tecnología blockchain, logrando tener una trazabilidad en tiempo y forma de las operaciones, así como de las validaciones realizadas por todos dentro de DICIO</p>
+                            <p class="texti">Este sistema de atestaciones y validaciones nos ayuda a dar certeza utilizando tecnología blockchain, logrando tener una trazabilidad en tiempo y forma de las operaciones, así como de las validaciones realizadas por todos dentro de DICIO.</p>
                         </div>
                     </div>
                     <div class="feature-item wow bounceInUp" data-wow-duration="3.5s">
@@ -445,7 +444,7 @@ BLOCKCHAIN</h5>
                         </div>
                         <div class="feature-item-content">
                             <h5>VIDEO TOKEN</h5>
-                            <p class="texti">Un proceso útil para fortalecer las contraseñas de un solo uso al utilizar los mecanismos estáticos y dinámicos de biometría</p>
+                            <p class="texti">Un proceso útil para fortalecer las contraseñas de un solo uso al utilizar los mecanismos estáticos y dinámicos de biometría.</p>
                         </div>
                     </div>
                     <div class="feature-item wow bounceInUp" data-wow-duration="3.5s">
@@ -454,7 +453,7 @@ BLOCKCHAIN</h5>
                         </div>
                         <div class="feature-item-content">
                             <h5>HOLOGRAMA</h5>
-                            <p class="texti">Genera una mayor certeza a la evidencia presentada por parte de los usuarios, al validar que existan los mecanismos holográficos de seguridad en sus documentos oficiales</p>
+                            <p class="texti">Genera una mayor certeza a la evidencia presentada por parte de los usuarios, al validar que existan los mecanismos holográficos de seguridad en sus documentos oficiales.</p>
                         </div>
                     </div>
                 </div>
@@ -539,7 +538,7 @@ BLOCKCHAIN</h5>
                     <div class="col-md-12">
                         <div class="section-title text-center white">
                             <span>Casos de Éxito</span>
-                            <h1>Nos enorgullece que nuestros clientes siempre cumplan sus metas y objetivos  en colaboración con DICIO</h1>
+                            <h1>Nos enorgullece que nuestros clientes siempre cumplan sus metas y objetivos  en colaboración con DICIO.</h1>
                             <img src="images/dot-white.png" alt="img">
                         </div>
                         <div class="space" style="height: 35px"></div>
@@ -547,12 +546,12 @@ BLOCKCHAIN</h5>
                     <div class="col-lg-8 col-sm-12">
                         <div class="testimonials">
                             <div class="testimonial-item">
-                                <p>Se implementó un proceso para sustituir la firma en papel por un proceso 100% digital, que favorece el almacenamiento y gestión de medios físicos. Garantizando validez legal</p>
+                                <p>Se implementó un proceso para sustituir la firma en papel por un proceso 100% digital, que favorece el almacenamiento y gestión de medios físicos. Garantizando validez legal.</p>
                                 <img src="assets/images/PNG/_Users_espinosa.o_Downloads_Nueva%20carpeta%20con%20elementos_MAIN_FILES_appy_assets_images_PNG_Mesa%20de%20trabajo%201@300x.png" class="lnr lnr-home text-white" width="160">
                                 <h4>CÍRCULO DE CRÉDITO</h4>
                             </div>
                             <div class="testimonial-item">
-                                <p>Agregó a su proceso existente mecanismos que le permiten mitigar el uso de credenciales apócrifas, además de poder conocer la vigencia de la credencial para votar INE</p>
+                                <p>Agregó a su proceso existente mecanismos que le permiten mitigar el uso de credenciales apócrifas, además de poder conocer la vigencia de la credencial para votar INE.</p>
                                 <img src="assets/images/PNG/_Users_espinosa.o_Downloads_Nueva%20carpeta%20con%20elementos_MAIN_FILES_appy_assets_images_PNG_credencial-logo.png" class="lnr lnr-home text-white" width="100">
                                 <h4>CREDENCIAL MÉXICO</h4>
                             </div>
@@ -673,7 +672,7 @@ BLOCKCHAIN</h5>
                     <div class="section-title">
                         <span>Agenda un tour de nuestro producto de la mano de nuestros expertos.</span>
                         <h1>Las soluciones de <span>DICIO</span> están listas para ser integradas al flujo de trabajo
-de tu empresa</h1>
+de tu empresa.</h1>
                         <img src="images/dot-bluecolor.png" alt="img">
                     </div>
                     <div class="space" style="height: 50px"></div>
@@ -708,46 +707,29 @@ de tu empresa</h1>
                 <div class="wave wave3"></div>
                 <div class="wave wave4"></div>
             </section>
+            <div class="diciofoot">
+                <div class="footer">
+                    <li class="footer2">
+                        <a href="#feature2">Inicio</a>
+                    </li>
+                    <li class="footer2">
+                        <a href="#feature2">Productos</a>
+                    </li>
+                    <li class="footer2">
+                        <a href="Notice.html" target="_blank">Aviso de privacidad</a>
+                    </li>
+                    <li class="footer2">
+                        <a href="#cta">Contacto</a>
+                    </li>
+                </div>
+            </div>
             <div class="logofoot">
                 <img src="images/logo-alt.svg" alt="logo" width="300" class="imgfo">
             </div>
-            <div class="dicio">
-                <div>
-                    <div class="footer">
-                        <li class="footer">
-                            <a href="#feature2">Inicio</a>
-                        </li>
-                        <li class="footer">
-                            <a href="#feature2">Productos</a>
-                        </li>
-                        <li>
-                            <a href="Notice.html" target="_blank">Aviso de privacidad</a>
-                        </li>
-                        <li>
-                            <a href="#cta">Contacto</a>
-                        </li>
-                    </div>
-                </div>
-            </div>
             <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
             <column class="Foot">
-                <div class="address-holder dicio">
-                    <div>
-                        <i></i> info@dicio.ai
-                    </div>
-                    <div>
-                        <i></i>
-                        <div>Piso 2, iOS Offices, Miyanna
-                            <br>
-                            Av. Ejército Nacional 769
-                            <br>
-                            Granada, Miguel Hidalgo 11520, CDMX
-                        </div>
-                    </div>
-                </div>
                 <div class="dicio ¡">
                     <div class="¡">
-                        <h4>Redes Sociales</h4>
                         <div>
                             <div class="redes">
                                 <div class="redes_icon">
@@ -770,8 +752,14 @@ de tu empresa</h1>
                     </div>
                 </div>
             </column>
+            <column class="Foot">
+                <div class=" dicio2">
+                    <p class="textfoot">info@dicio.ai</p>
+                    <p class="textfoot">Piso 2, iOS Offices, Miyanna Av. Ejército Nacional 769 Granada, Miguel Hidalgo 11520, CDMX</p>
+                </div>
+            </column>
             <div class="footer-copyright">
-                <p>copyright &copy; DICIO 2021. All Right Reserved</p>
+                <p>Copyright &copy; DICIO 2021. All Right Reserved</p>
             </div>
         </footer>
         <div id="backtotop">
