--- a/index.html
+++ b/index.html
@@ -133,6 +133,8 @@
                                             <span class="close">&times;</span>
                                             <div class="row contact-form">
                                                 <div class="col-md-6">
+                                                    <h2 class="news">
+                        Registra tu mail para darte más información. </h2>
                                                     <input type="email" class="form-control" placeholder="E-mail">
                                                 </div>
                                                 <div class="col-md-12">
