--- a/index.html
+++ b/index.html
@@ -240,13 +240,6 @@ window.onclick = function(event) {
                     </div>
                     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
                 </div>
-                <div class="col-lg-4 col-sm-6 fadeInUp wow zin" data-wow-duration="2.5s">
-                    <div class="service-item">
-                        <i class="flaticon-arrow"></i>
-                        <h5><p>Menor costo operativo</p></h5>
-                    </div>
-                    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-                </div>
             </div>
         </div>
         <lottie-player src="https://assets4.lottiefiles.com/packages/lf20_ojqrskc0.json" background="transparent" speed="1" loop autoplay class="blob2 blob4k2"></lottie-player>
@@ -265,8 +258,8 @@ window.onclick = function(event) {
                     </div>
                     <p>Desarrollamos herramientas seguras, inteligentes y altamente competitivas para facilitar las interacciones digitales de nuestros clientes.</p>
                     <ul>
-                        <li>Optimiza tiempos de respuesta, mayor disponibilidad.</li>
                         <li>Más clientes con vinculación no presencial, fuera del horario de sucursal (Multicanal).</li>
+                        <li>Optimiza tiempos de respuesta, mayor disponibilidad.</li>
                         <li>Inclusión financiera y digital.</li>
                         <li>Realizamos validaciones con verificación institucional.</li>
                     </ul>
@@ -437,16 +430,7 @@ la Norma Oficial Mexicana 151.</p>
                         <div class="feature-item-content">
                             <h5>VALIDACIÓN EN
 BLOCKCHAIN</h5>
-                            <p class="texti">Este sistema de atestaciones y validaciones nos ayuda a dar certeza utilizando tecnología blockchain, logrando tener una trazabilidad en tiempo y forma de las operaciones, así como de las validaciones realizadas por todos dentro de DICIO.</p>
-                        </div>
-                    </div>
-                    <div class="feature-item wow bounceInUp" data-wow-duration="3.5s">
-                        <div class="feature-item-icon">
-                            <i class="flaticon-reproductor-de-video"></i>
-                        </div>
-                        <div class="feature-item-content">
-                            <h5>VIDEO TOKEN</h5>
-                            <p class="texti">Un proceso útil para fortalecer las contraseñas de un solo uso al utilizar los mecanismos estáticos y dinámicos de biometría.</p>
+                            <p class="texti">Esta tecnología permite hacer una auditoría, logrando tener una trazabilidad en tiempo y forma de las operaciones. Seguimiento de la transacción de principio a fin. Utilizando nuestro modelo de Inteligencia artificial.</p>
                         </div>
                     </div>
                     <div class="feature-item wow bounceInUp" data-wow-duration="3.5s">
@@ -549,13 +533,11 @@ BLOCKCHAIN</h5>
                         <div class="testimonials">
                             <div class="testimonial-item">
                                 <p>Se implementó un proceso para sustituir la firma en papel por un proceso 100% digital, que favorece el almacenamiento y gestión de medios físicos. Garantizando validez legal.</p>
-                                <img src="assets/images/PNG/_Users_espinosa.o_Downloads_Nueva%20carpeta%20con%20elementos_MAIN_FILES_appy_assets_images_PNG_Mesa%20de%20trabajo%201@300x.png" class="lnr lnr-home text-white" width="160">
                                 <h4>CÍRCULO DE CRÉDITO</h4>
                             </div>
                             <div class="testimonial-item">
                                 <p>Agregó a su proceso existente mecanismos que le permiten mitigar el uso de credenciales apócrifas, además de poder conocer la vigencia de la credencial para votar INE.</p>
-                                <img src="assets/images/PNG/_Users_espinosa.o_Downloads_Nueva%20carpeta%20con%20elementos_MAIN_FILES_appy_assets_images_PNG_credencial-logo.png" class="lnr lnr-home text-white" width="100">
-                                <h4>CREDENCIAL MÉXICO</h4>
+                                <h4>SOCIEDAD DE INFROMACIÓN CREDITICIA</h4>
                             </div>
                         </div>
                     </div>
