--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@ window.onclick = function(event) {
                                 <div class="feature--new">
                                     <div class="feature--icon">
                                         <i class="flaticon-life-insurance icons"></i>
-                                        <h9 class="new_class">Aseguradoras</h9>
+                                        <h9 class="new_class">Recursos Humanos</h9>
                                     </div>
                                     <div class="feature--content">
 </div>
@@ -430,7 +430,7 @@ la Norma Oficial Mexicana 151.</p>
                         <div class="feature-item-content">
                             <h5>VALIDACIÓN EN
 BLOCKCHAIN</h5>
-                            <p class="texti">Esta tecnología permite hacer una auditoría, logrando tener una trazabilidad en tiempo y forma de las operaciones. Seguimiento de la transacción de principio a fin. Utilizando nuestro modelo de Inteligencia artificial.</p>
+                            <p class="texti">Esta tecnología permite hacer una auditoría, logrando tener una trazabilidad en tiempo y forma de las operaciones. Así mismo teniendo un seguimiento de la transacción de principio a fin. </p>
                         </div>
                     </div>
                     <div class="feature-item wow bounceInUp" data-wow-duration="3.5s">
@@ -439,7 +439,7 @@ BLOCKCHAIN</h5>
                         </div>
                         <div class="feature-item-content">
                             <h5>HOLOGRAMA</h5>
-                            <p class="texti">Genera una mayor certeza a la evidencia presentada por parte de los usuarios, al validar que existan los mecanismos holográficos de seguridad en sus documentos oficiales.</p>
+                            <p class="texti">Genera una mayor certeza a la evidencia presentada por parte de los usuarios, al validar que existan los mecanismos holográficos de seguridad en sus documentos oficiales. Utilizando nuestro modelo de Inteligencia artificial.</p>
                         </div>
                     </div>
                 </div>
@@ -533,11 +533,11 @@ BLOCKCHAIN</h5>
                         <div class="testimonials">
                             <div class="testimonial-item">
                                 <p>Se implementó un proceso para sustituir la firma en papel por un proceso 100% digital, que favorece el almacenamiento y gestión de medios físicos. Garantizando validez legal.</p>
-                                <h4>CÍRCULO DE CRÉDITO</h4>
+                                <h4>SOCIEDAD DE INFROMACIÓN CREDITICIA</h4>
                             </div>
                             <div class="testimonial-item">
                                 <p>Agregó a su proceso existente mecanismos que le permiten mitigar el uso de credenciales apócrifas, además de poder conocer la vigencia de la credencial para votar INE.</p>
-                                <h4>SOCIEDAD DE INFROMACIÓN CREDITICIA</h4>
+                                <h4>EMPRESA DE IDENTIFICACIÓN DIGITAL</h4>
                             </div>
                         </div>
                     </div>
